# Aldi-Sentiment-Analysis

./: .gitignore  config.json  google-web-scrape-playwright-test.py  productreview-com-au-page-1.html  pyproject.toml  web-scrape-playwright-test.py
data/: LocationsData.csv  Store and DC List.xlsx  act-liquor-stores-page-1.json  act-liquor-stores-page-2.json  act-liquor-stores-page-3.json  act-liquor-stores-page-4.json  act-liquor-stores-page-5.json  act-liquor-stores.csv  aldi-au-glassdoor-reviews-page-1.json  aldi-au-glassdoor-reviews-page-2.json  aldi-au-glassdoor-reviews-page-3.json  aldi-au-glassdoor-reviews-page-4.json  aldi-au-glassdoor-reviews-page-5.json  aldi-au-glassdoor-reviews-page-7.json  aldi-au-glassdoor-reviews-page-9.json  aldi-productreview-com-au-page-1.html  aldi-productreview-com-au-page-2.html  aldi-productreview-com-au-page-3.html  aldi-productreview-com-au-page-4.html  aldi-productreview-com-au-page-5.html  aldi-productreview-com-au-page-6.html  aldi-productreview-com-au-page-7.html  aldi-productreview-com-au-page-8.html  aldi-productreview-com-au-page-9.html  aldi-trustpilot-reviews-v2.yxdb  aldi-trustpilot-reviews.json  aldi-trustpilot-reviews.yxdb  aldi-trustpilot.csv  aldi-trustpilot.json  coles-trustpilot-reviews.csv  coles-trustpilot-reviews.json  liquorland_near_store.csv  liquorland_near_store_503001.json  liquorland_near_store_503002.json  liquorland_near_store_503003.json  liquorland_near_store_503004.json  liquorland_near_store_503006.json  liquorland_near_store_503007.json  liquorland_near_store_503008.json  (+100 more)
src/: liquorland-stores.py  (+26 more)
(+69 files in other folders)
