[tool.poetry]
name = "aldi-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Dan Lawson <52593003+danlsn@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aldi_sentiment_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
